# flang

./: .gitignore  CMakeLists.txt  build.sh  run.sh  spec.txt
data/test/frontend/: fail_parsing1.f  fail_semantic1.txt  fail_semantic10.f  fail_semantic11.f  fail_semantic12.f  fail_semantic13.f  fail_semantic15.f  fail_semantic18.f  fail_semantic4.f  fail_semantic7.f  fail_semantic9.f  pass1.txt  pass10.f  pass11.f  pass12.f  pass13.f  pass14.f  pass15.f  pass16.f  pass17.f  pass18.f  pass3.txt  pass4.txt  pass5.f  pass6.f  pass9.f
data/test/full/: all_control_flow.f  arrays_from_objects.f  closure_test.f  closures.f  hello_world.f  html_gen_with_closures.f  no_if.f  recurse.f  test_late_binding.f  with_console.f
data/test/performance/: iterative_fib.f  iterative_fib.py  recursive_fib.f  recursive_fib.py
include/: Ast.hpp  AstCompiler.hpp  AstWalker.hpp  ByteCode.hpp  Error.hpp  Interpreter.hpp  Io.hpp  Parser.hpp  Readable.hpp  Reader.hpp  Runtime.hpp  SemanticAnalyzer.hpp  StringReader.hpp  Stringable.hpp  Token.hpp  TokenBuffer.hpp  Tokenizer.hpp  lib.hpp
include/compiler/: AstCompiler.hpp
include/frontend/: Ast.hpp  AstWalker.hpp  AstWalkerHandler.hpp  Parser.hpp  SemanticAnalyzer.hpp  Token.hpp  TokenBuffer.hpp  TokenType.hpp  Tokenizer.hpp
include/runtime/: Interpreter.hpp  Runtime.hpp
include/utils/: Io.hpp  error.hpp  macros.hpp
scripts/: benchmark.sh  build.sh  callgrind.sh  clang-tidy.sh  clean.sh  install.sh  run.sh  test.sh
src/: Ast.cpp  AstCompiler.cpp  AstWalker.cpp  ByteCode.cpp  Error.cpp  Interpreter.cpp  Parser.cpp  Reader.cpp  Runtime.cpp  SemanticAnalyzer.cpp  StringReader.cpp  Token.cpp  TokenBuffer.cpp  Tokenizer.cpp  main.cpp
src/frontend/: AstWalker.cpp  Token.cpp  TokenBuffer.cpp  Tokenizer.cpp
test/: frontend_tester.cpp
vscode-language-support/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode-language-support/syntaxes/: theme.json
